--- a/static/css/dispatch/regularly.css
+++ b/static/css/dispatch/regularly.css
@@ -92,7 +92,6 @@ tbody {
 table tr {
   display: flex;
   width: 100%;
-  height: 6.4rem;
   border-bottom: 0.1rem solid #CDCDCE;
 }
 
@@ -118,11 +117,19 @@ table a {
 }
 
 .regularlyDispatchBtn {
-  padding: 0.3rem 1.6rem;
+  text-align: center;
+  padding: 0.3rem 1rem;
   background-color: #0069D9;
   color: white;
   border-radius: 0.2rem;
   cursor: pointer;
+  margin: 1rem 0;
+  box-sizing: border-box;
+}
+.tableBody tr{
+  min-height: 6.4rem;
+  height: auto;
+  max-height: auto;
 }
 
 .tableBody td {
@@ -161,7 +168,7 @@ td:nth-child(4) {
 }
 
 td:nth-child(5) {
-  width: 7%;
+  width: 8%;
 }
 
 td:nth-child(6) {
@@ -171,11 +178,15 @@ td:nth-child(6) {
 }
 
 td:nth-child(7) {
+  display: flex;
+  justify-content: center;
   width: 9%;
+  padding: 0 2rem 0 0;
+  box-sizing: border-box;
 }
 
 td:nth-child(8) {
-  width: 20%;
+  width: 19%;
   padding-right: 1%;
   word-break: keep-all;
 }
@@ -582,7 +593,18 @@ td:nth-child(8) {
   display: flex;
   flex-direction: column;
   align-items: flex-end;
+  width: 100%;
   border-bottom: 0.1rem solid #191919;
+}
+
+.dateArea {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.dateCell {
+  width: calc(100%/7);
 }
 
 .routePopupDataDriveDate input[type=checkbox] {
